# PySQLSh

./: .gitignore  README.md  migrate.sql  pyproject.toml  pysqlsh.py
src/: pysqlsh.py
